@@ -49,6 +49,9 @@ Avro 1.5.1 (unreleased)
     AVRO-780. Java: Fix a NullPointerException with reflect data when
     a union contains an array and null. (cutting)
 
+    AVRO-790. Java: GenericDatumReader can fail when reusing objects with unions
+    containing 'bytes' fields. (scottcarey)
+
 Avro 1.5.0 (10 March 2011)
 
   INCOMPATIBLE CHANGES
